test/classes/delete-free/errors-managed-record.chpl
record R {
}

var y:unmanaged R;
var z:borrowed R;

var a:borrowed int;
var b:unmanaged int;
